# gnss_ins_cpp

./: .readthedocs.yaml  CMakeLists.txt  LICENSE  README.md  docker-compose.yml
data/: LICENSE
docker/: Dockerfile.clang  Dockerfile.docs  Dockerfile.gcc  toolchain-clang.cmake
docs/source/: conf.py  index.rst
docs/source/_static/: custom.css
docs/source/deployment/: docker_workflow.md  hpe_server.md
docs/source/getting_started/: architecture.md  motion_profiles.md  overview.md
docs/source/reference/: appendices.md  constants_types.md  function_reference.md  work_plan.md
docs/source/tutorial/: step1_scaffolding.md  step2_earth_math.md  step3_nav_equations.md  step4_imu_gnss.md  step5_kalman_filters.md  step6_sim_loops.md  step7_cli_docs.md
include/gnss_ins/: common.hpp
include/gnss_ins/attitude/: euler_ctm.hpp
include/gnss_ins/earth/: gravity.hpp  radii.hpp
include/gnss_ins/io/: profile_io.hpp
tests/: CMakeLists.txt  test_earth.cpp  test_io.cpp
